# Scholar-AI

./: .axe-linter.yml  .env.example  .env.frontend.example  .gitattributes  .gitignore  00_Batch_Process_Controller.py  00_Integrated_Pipeline_v40.0.py  00_START_HERE.md  01_完整提取脚本.py  02_图文绑定脚本.py  03_目标导向材料包脚本.py  07_analysis_scoring_improved_v9.py  08_Word文档生成脚本.py  12_卷级深度分析与索引脚本.py  AGENTS.md  AI_WORKSPACE_GUIDE.md  API_CONFIGURATION.md  ARCHITECTURE.md  BASELINE_METRICS.json  BASELINE_METRICS_canary30_qwen3.json  BASELINE_METRICS_canary30_qwen3_rerank4b.json  BASELINE_METRICS_phase41_with_rerank.json  BASELINE_METRICS_phase42_1656snapshot.json  BASELINE_METRICS_phase42_rerank_no_exp.json  BASELINE_METRICS_phase4_no_rerank.json  BASELINE_METRICS_phase4_with_rerank.json  BASELINE_METRICS_phase5_qwen3.json  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CODE_REVIEW_FIXES.md  CODE_REVIEW_IMPROVEMENTS_REPORT.md  CODE_REVIEW_SUMMARY.md  COMMIT_SUMMARY.md  COMPLETE_ROBUSTNESS_REPORT.md  COMPLETION_CHECKLIST.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CRITICAL_SECURITY_FIXES.md  DELIVERABLES_SUMMARY.md  (+164 more)
.claude/: settings.json  settings.local.json  settings.local.json.bak-20260418-permissions-bypass
.github/: copilot-instructions.md
.kilo/: kilo.json
.squad/: COMMIT_MSG.txt  EXECUTION_NOTICE.md  casting-policy.json  casting-registry.json  charter.md  config.json  copilot-instructions.md  decisions-archive.md  decisions.md  roster.md  routing.md  session-log-blocker-milestone-2026-04-22.md  team.md
agent_mcp_server/: CAPABILITY_MAP.md  README.md  __init__.py  pyproject.toml
agent_mcp_server/packaging/claude-code/: add-user.ps1
agent_mcp_server/packaging/claude-desktop/: build_mcpb.ps1  claude_desktop_config.example.json  manifest.json
agent_mcp_server/packaging/codex/: add-user.ps1  config.example.toml  marketplace.example.json
agent_mcp_server/packaging/codex/plugin/: .mcp.json  README.md  marketplace.example.json
agent_mcp_server/packaging/codex/plugin/.codex-plugin/: plugin.json
agent_mcp_server/packaging/codex/plugin/skills/literature-toolbox/: SKILL.md
agent_mcp_server/src/lit_assistant_mcp/: __init__.py  audit.py  backend_client.py  backend_launcher.py  behavior_eval.py  policy.py  python_sandbox.py  redaction.py  repo_root.py  result.py  runtime_attach.py  server.py
agent_mcp_server/src/lit_assistant_mcp/tools/: __init__.py  experimental.py  runtime.py  source.py  workflow.py
agent_mcp_server/src/lit_assistant_mcp/workflow_runtime/: __init__.py  expressions.py  interpreter.py  workspace.py
agent_mcp_server/tests/: __init__.py  test_backend_client.py  test_backend_launcher.py  test_distribution.py  test_experimental_tools.py  test_policy.py  test_redaction.py  test_result.py  test_runtime_attach.py  test_runtime_tools.py  test_server.py  test_source_tools.py  test_stdio_academic_writing_acceptance.py  test_stdio_smoke.py  test_workflow_tools.py
config/: rag_integration_config.yaml
docs/: API_CONFIGURATION.md  LOCAL_RERANK_MODELS.md  MCP_SECURITY_ISOLATION.md  OPTIONAL_ADDONS.md  ai-agent-guide.md  claude-codex-toolbox.en.md  claude-codex-toolbox.md  local-rerank-fallback-models.md  rag-evidence-architecture.en.md  rag-evidence-architecture.md
frontend/: .axe-linter.yml  .env.example  eslint.config.js  index.html  package-lock.json  package.json  playwright.agent-workspace.config.ts  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.agent-workspace.e2e.ts  vite.config.e2e.ts  vite.config.ts
layers/: DEPENDENCIES_SPRINT_1_2.txt  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_VERIFICATION_CHECKLIST.md  QUICK_REFERENCE.md  SEMANTIC_ROUTER_OPTIMIZATION_SUMMARY.md  VERIFICATION_CHECKLIST.md  a_layer_agent_coordinator.py  adaptive_batch_processor.py  adaptive_weight_manager.py  ai_adapter.py  e_layer_multimodal.py  e_parser_ragflow_adapter.py  focus_extractor.py  g_layer_academic_generator.py  g_synthesis_graphrag_bridge.py  m_layer_mempalace_memory.py  multi_layer_cache.py  p2_claim_extractor.py  p3_dynamic_updater.py  p3_exporter.py  r_layer_hybrid_retriever.py  semantic_router.py  tolf_engine.py  v_eval_autorag_runner.py  w_layer_cross_paper_analysis.py
literature_assistant/: AGENT_SOURCE_MAP.md  README.md  __init__.py  __main__.py  bootstrap.py
models/: __init__.py  pipeline.py  resources.py  runtime.py  skills.py
modules/: batch_manager.py  cache_manager.py
repositories/: writing_runtime_repository.py
routers/: agent_router.py  chat_router.py  inspiration_router.py  pipeline_router.py  resources_router.py  runtime_router.py  skills_router.py
scholar_ai_workbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: README.md  adjudicate_gateb_firstpass_100.py  audit_3_8_dod.py  audit_pyinstaller_hiddenimports.py  build_gateb_firstpass_100_real.py  build_gateb_phase_a_trusted.py  build_windows_exe.ps1  check_corpus_sync.py  dump_pyinstaller_analysis.py  embedding_backfill.py  export_openapi_schema.py  ingest_project_pdfs.py  migrate_chunk_store_to_jsonl.py  migrate_modular_sessions.py  precompute_contextual_summaries.py  release_forbidden_path_scan.py  release_secret_scan.py  repair_modular_sessions.py  reslice_oversize_materials.py  rotate_output.py  safe_env_connectivity_check.py  scan_oversize_chunks.py  smoke_frozen_first_launch.py  smoke_windows_release.ps1  squad_metrics_aggregator.py  validate_contextual_miss.py
skills/: approval.py  audit.py  registry.py  runtime.py  service.py  skill_flow_adapter.py
tests/: __init__.py  conftest.py  live_api_chat_full_writing_chain_smoke.py  live_api_chat_knowledge_context_receipt_smoke.py  live_provider_direct_workflow_smoke.py  test_agent_bridge_router.py  test_agent_workspace_mcp_contract.py  test_agent_workspace_router.py  test_ai_adapter_chat_helper.py  test_ai_sampling.py  test_api_chat_local_literature_tool_use.py  test_api_probe_semantics.py  test_approval_persistence.py  test_batch_controller_smoke.py  test_batch_parallel_processing.py  test_batch_to_volume_e2e.py  test_build_windows_exe_script.py  test_chart_agent.py  test_chart_metrics.py  (+159 more)
(+1688 files in other folders)
